[gd_scene load_steps=5 format=3 uid="uid://by5dskr0up5gv"]

[ext_resource type="Script" uid="uid://qegpq7634io8" path="res://pause.gd" id="1_6eyaj"]
[ext_resource type="Texture2D" uid="uid://dcysx1h86n8nd" path="res://assets/Camp.jpg" id="1_aq7p1"]
[ext_resource type="FontFile" uid="uid://cwd1tkm36irny" path="res://assets/pixel_font.ttf" id="2_6eyaj"]
[ext_resource type="AudioStream" uid="uid://bkk6pr84kkddb" path="res://assets/audio/MenuClick.wav" id="4_8u653"]

[node name="Pause" type="CanvasLayer"]
script = ExtResource("1_6eyaj")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_aq7p1")
expand_mode = 1

[node name="PausedLabel" type="Label" parent="."]
offset_left = 160.0
offset_top = 184.0
offset_right = 460.0
offset_bottom = 234.0
theme_override_fonts/font = ExtResource("2_6eyaj")
theme_override_font_sizes/font_size = 50
text = "Paused"

[node name="PausedLabel2" type="Label" parent="."]
offset_left = 288.0
offset_top = 256.0
offset_right = 480.0
offset_bottom = 280.0
theme_override_fonts/font = ExtResource("2_6eyaj")
theme_override_font_sizes/font_size = 15
text = "Take a break"

[node name="ResumeButton" type="Button" parent="."]
offset_left = 192.0
offset_top = 320.0
offset_right = 432.0
offset_bottom = 376.0
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_6eyaj")
theme_override_font_sizes/font_size = 30
text = "Resume"

[node name="RestartButton" type="Button" parent="."]
offset_left = 192.0
offset_top = 400.0
offset_right = 432.0
offset_bottom = 456.0
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_6eyaj")
theme_override_font_sizes/font_size = 30
text = "Restart"

[node name="MenuButton" type="Button" parent="."]
offset_left = 192.0
offset_top = 480.0
offset_right = 432.0
offset_bottom = 536.0
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_6eyaj")
theme_override_font_sizes/font_size = 30
text = "Menu"

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("4_8u653")

[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
